2003-05-01    John E. Joganic <john@joganic.com>

	* Changed Graphire from absolute wheel to relative.
	* Moved throttle position check out of Suppress.  Need it elsewhere.

2003-04-29    John E. Joganic <john@joganic.com>

	* Expanded graphire parsing; all devices use same data path
	* Disabled throttle/wheel correlation for now; needs work and
	  option for enabling/disabling.
	* Split absolute and relative wheel at early data path stage
	* Added pressure curve; implementation is a bit overkill, but it works

2003-04-21    Ping Cheng <pingc@wacom.com>

	* Updated serial UD and PL code for the refactored src

2003-04-19    Jimmy Yen <jimmy@yen.tp>

	* Fixed throttle code.
	* Slightly refined Xinerama code. Use X's own global variable instead
	  for Xinerama detection.
	* Disallow pointers to enter dead areas, causing setting screen to fail.

2003-04-18    Jimmy Yen <jimmy@yen.tp>

	* Extra checking to set screen only when the device sends core events.
	* Made KeepShape compatible with multiple screen setup.
	* Reenabled throttle and fake button 4/5 code. Can be disabled by
	  setting 'Option "MouseWheel" "off"'. This still needs work.
	* Unified cursor acceleration in both directions.

2003-04-17    Jimmy Yen <jimmy@yen.tp>

	* Software solution of dual channel input for USB devices.

2003-04-16    Jimmy Yen <jimmy@yen.tp>

	* Basic Xinerama setup support. Works with horizontal, non-overlapping
	  screen combinations with different resoluions. Users need to specify
	  'Option Xinerama "on"' for each absolute device.

2003-04-14    Jimmy Yen <jimmy@yen.tp>

	* Small KeepShape fix.
	* Cleaned up xf86WcmSendEvents.
	* Fallback case in device selection code.

2003-04-08    John E. Joganic <john@joganic.com>

	* Fixed USB tilt ranges.
	* Exploded out serial tablet initialization.
	* Reporting throttle on cursor valuator 4
	* Fixed serial 4D mouse rotation value
	* Default threshold to 1/32 maximum pressure

2003-04-07    John E. Joganic <john@joganic.com>
